Se agrega Entidad Financiera

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.devtools.restart.additional-paths=.
+#spring.devtools.restart.additional-paths=.
 spring.datasource.url=jdbc:postgresql://localhost:5432/appFinanzas_db
 spring.datasource.username=postgres
 spring.datasource.password=admin123
